<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Caida1"
    android:background="@drawable/fondo2"
    tools:showIn="@layout/activity_caida1"
    >


    <ImageView
        android:id="@+id/Redonda"
        android:layout_width="314dp"
        android:layout_height="407dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"
        app:srcCompat="@drawable/redonda" />

    <Button
        android:id="@+id/BotonCaida1"
        android:layout_width="410dp"
        android:layout_height="291dp"
        android:background="@android:color/transparent"
        android:onClick="Caida"
        android:text="@string/Boton3"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />/>

    <Button
        android:id="@+id/BotonCaida2"
        android:layout_width="wrap_content"
        android:layout_height="176dp"
        android:background="@android:color/transparent"
        android:onClick="Caida"
        android:text="@string/Boton4"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/BotonFalsaCaida1"
        android:layout_width="410dp"
        android:layout_height="301dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="FalsaCaida"
        android:text="@string/Boton1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BotonFalsaCaida2"
        android:onClick="FalsaCaida"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:background="@android:color/transparent"
        android:text="@string/Boton2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/FalsaCaida"
        android:layout_width="272dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quaalio"
        android:gravity="center"
        android:text="@string/FalsaCaida"
        android:textSize="85sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/BotonCaida1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/BotonCaida2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/Caida"
        android:layout_width="272dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quaalio"
        android:gravity="center"
        android:text="@string/Cada"
        android:textSize="85sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/BotonCaida1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="@+id/BotonCaida2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/DetectCaida"
        android:layout_width="205dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quaalio"
        android:gravity="center"
        android:text="@string/DetecCaida"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/BotonCaida1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/BotonCaida2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/time_display_box"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quaalio"
        android:gravity="center"
        android:text="@string/_00_30"
        android:textColor="@android:color/background_light"
        android:textSize="85sp"
        app:layout_constraintBottom_toBottomOf="@+id/BotonCaida1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/BotonCaida2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"
        tools:targetApi="jelly_bean" />




</android.support.constraint.ConstraintLayout>